--- a/pj_release/Principal.html
+++ b/pj_release/Principal.html
@@ -59,7 +59,7 @@
                                     
                                 </p>
                                 <br>
-                                <p>Disfruta de la nueva App Web :). By: <span class="badge badge-dark">Enseñame team</span> </p>
+                                <p>Disfruta de la nueva App Web :). By: <span class="badge badge-dark">Enseña-me team</span> </p>
                                 
                               </div>
                 </div>
