--- a/pj_release/Principal.html
+++ b/pj_release/Principal.html
@@ -22,8 +22,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item" style="padding-left: 2.1%;">
-                        <a href="#"><img src="professor.svg" width="80" height="45" class="d-inline-block align-top"
-                                alt=""></a>
+                        <a href="#">
+                                <img src="professor.svg" width="80" height="45" class="d-inline-block align-top"
+                                alt="" onclick="serProfesor()"></a>
+                            
 
                     </li>
                     <li class="nav-item">
@@ -74,8 +76,9 @@
                         <div class="card-body text-dark text-center">
                           <h5 class="card-title" id="card-user-title"></h5>
                           <img src="student.svg" width="100" height="120" class="rounded-circle">
-                          </br> 
-                        </br>
+                          </br> </br>
+                          <div id="mensaje_bienvenida"></div>
+                        
                           <p style="font-size: 90%;"><span class="badge badge-pill badge-dark" id="saldo">Saldo</span>         200EDC</p>
                           <span class="badge badge-pill badge-success">Online</span>
                     </br>
