--- a/pj_release/Contacto.html
+++ b/pj_release/Contacto.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
             <a class="navbar-brand " href="Inicio.html">
-                <img src="factory.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                <img src="/resources/factory.svg" width="30" height="30" class="d-inline-block align-top" alt="">
                 Ang Co.
             </a>
 
