--- a/pj_release/Inicio.html
+++ b/pj_release/Inicio.html
@@ -18,14 +18,16 @@
 
 <body>
   <header>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-expand-lg navbar-dark">
       <a class="navbar-brand " href="Inicio.html">
-        <img src="factory.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="/resources/factory.svg" width="30" height="30" class="d-inline-block align-top" alt="">
         Ang Co.
       </a>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ">
           <li class="nav-item active">
             <a class="nav-link" href="#">Login<span class="sr-only">(current)</span></a>
           </li>
@@ -108,14 +110,6 @@
   <script src="like_button.js"></script>
   <script src="logic.js"></script>
 </body>
-<script>
-  $('.carousel').carousel({
-    interval: 100
-  })
-</script>
-
-
-
 <!-- Cargar Bootstrap. -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
